# CompressorImplementation

./: .gitmodules  CMakeLists.txt  CompressorImplementation.jucer
Source/: Compressor.cpp  Compressor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
